Switched to private DNS, and added javadoc.