@@ -4,55 +4,46 @@ import datameer.awstasks.aws.ec2.InstanceGroup;
 import datameer.awstasks.aws.ec2.ssh.SshClient;
 import java.io.File;
 import java.io.IOException;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
-
+/**
+ * This class is used to asynchronously start a group of workers.
+ *
+ * @author charlesmunger
+ */
 public class WorkerThread extends Thread {
+
+    /**
+     * This refers to the name of the Jar containing the Worker classes.
+     */
     public static final String JARNAME = "jpregel-aws.jar";
     private InstanceGroup instanceGroup;
     private String masterDomainName;
     File privateKeyFile = new File("mungerkey.pem");
-    //this is ugly, and I want to remove it as soon as pull requests are approved on AWS-TASKS. 
-private static class Temp extends Thread {
 
-        String command;
-        SshClient s;
-        private final int i;
-
-        public Temp(String command, SshClient s, int i) {
-            this.command = command;
-            this.s = s;
-            this.i = i;
-        }
-
-        @Override
-        public void run() {
-            try {
-                int[] arr = {i};
-                System.out.println("Executing on " + i);
-                s.executeCommand(command, System.out, arr);
-            } catch (IOException ex) {
-                Logger.getLogger(MasterThread.class.getName()).log(Level.SEVERE, null, ex);
-            }
-        }
-    }
-
+    /**
+     * Creates a new worker thread to start a group of workers.
+     * @param instanceGroup The instance group to start workers on.
+     * @param masterDomainName The domain of the master to connect to. 
+     */
     public WorkerThread(InstanceGroup instanceGroup, String masterDomainName) {
         this.instanceGroup = instanceGroup;
         this.masterDomainName = masterDomainName;
     }
 
+    /**
+     * SSHs into every host in the worker instance group, uploads files, and
+     * then starts the Worker class pointed at the master's domain name.
+     */
     @Override
     public void run() {
         try {
             Thread.sleep(15000);
         } catch (InterruptedException ex) {
-            Logger.getLogger(WorkerThread.class.getName()).log(Level.SEVERE, null, ex);
+            System.out.println("Waiting interrupted");
         }
-        SshClient sshClient = instanceGroup.createSshClient("ec2-user", privateKeyFile);
+        SshClient sshClient = instanceGroup.createSshClient("ec2-user", privateKeyFile, false);
         File jars = new File("jars.tar");
-        if(!jars.exists()) {
+        if (!jars.exists()) {
             try {
                 Runtime.getRuntime().exec("tar -cvf jars.tar ./dist/lib");
             } catch (IOException ex) {
@@ -61,15 +52,15 @@ private static class Temp extends Thread {
             }
         }
         File thisjar = new File(JARNAME);
-        File distjar = new File("dist/"+JARNAME);
-        if(thisjar.exists()) {
+        File distjar = new File("dist/" + JARNAME);
+        if (thisjar.exists()) {
             try {
                 sshClient.uploadFile(thisjar, "~/" + JARNAME);
             } catch (IOException ex) {
                 System.out.println("Error uploading jar");
                 System.exit(1);
             }
-        } else if(distjar.exists()) {
+        } else if (distjar.exists()) {
             try {
                 sshClient.uploadFile(distjar, "~/" + JARNAME);
             } catch (IOException ex) {
@@ -85,26 +76,13 @@ private static class Temp extends Thread {
             sshClient.uploadFile(new File("key.AWSkey"), "~/key.AWSkey");
             sshClient.uploadFile(new File("policy"), "~/policy");
             sshClient.executeCommand("tar -xvf jars.tar", null);
-//            for (int i = 0; i < instanceGroup.instanceCount(); i++) {
-//                (new Temp("java -cp " + JARNAME + ":./dist/lib/*"
-//                        + " -Djava.security.policy=policy"
-//                        //+ " -Djava.ext.dirs=dist/lib/ " 
-//                        + " system.Worker " + masterDomainName, sshClient, i)).start();
-//            }
             sshClient.executeCommand("java -cp " + JARNAME + ":./dist/lib/*"
                     + " -Djava.security.policy=policy"
-                    //+ " -Djava.ext.dirs=dist/lib/ " 
                     + " system.Worker " + masterDomainName, null);
             System.out.println("Returned!");
         } catch (IOException ex) {
             System.out.println("Unable to upload file.");
             System.exit(1);
         }
-//        try {
-//            sshClient.executeCommand("./classpath.sh " + masterDomainName, IoUtil.closeProtectedStream(System.out));
-//        } catch (IOException e) {
-//            // TODO Auto-generated catch block
-//            e.printStackTrace();
-//        }
     }
 }
